# coi-actix-sample

./: Cargo.toml  Dockerfile  README.md
src/: main.rs  postgres.rs
src/repositories/: error.rs  repo.rs
src/routes/: data.rs
src/services/: error.rs  service.rs
xtask/: Cargo.toml
xtask/src/: main.rs
