[package]
name = "coi-actix-sample"
version = "0.1.0"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nashenas88/coi-actix-sample"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
async-trait = "0.1.24"
coi = "0.10.1"
coi-actix-web = "0.7.1"
env_logger = "0.10.0"
futures = "0.3.25"
log = "0.4.8"
mobc-postgres = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[features]
default = []
debug = ["coi/debug"]
