[package]
name = "xtask"
version = "0.1.0"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2018"

[dependencies]
env_logger = "0.10.0"
console-subscriber = "0.1"
structopt = "0.3"
bollard = "0.13.0"
tokio-postgres = "0.7"
thiserror = "1.0"
tokio = { version = "1.24", features = ["macros"] }

[workspace]
